--- a/includes/featured.042715.1.jade
+++ b/includes/featured.042715.1.jade
@@ -1,5 +1,5 @@
 ////////////////////////////////////////////
-// 		FEATURED
+// 		FEATURED ITEMS
 /////////////////////////////////////////
 
 //- ===================================
@@ -24,6 +24,7 @@ mixin selectEntry1(heading,priceVal,imgSrc,altText)
 				a(href="#").colour2
 
 mixin newInEntry1
+	// NEW IN ENTRY PRODUCT  ------------------------------------------------
 	section.featureEntry
 		h2 New-In
 		.topBar
@@ -36,8 +37,11 @@ mixin newInEntry1
 			+selectEntry1('Abstract Dooted Dress','$21.5')
 			+selectEntry1('Flair Trap Dress','$22.5')
 			+selectEntry1('Chipon & Floral Dress','$23.5')
+	// END NEW IN ENTRY PRODUCT ------------------------------------------------
+
 
 mixin featuredEntry1
+	// FEATURED ENTRY PRODUCT  ------------------------------------------------
 	section.featureEntry
 		h2 Featured
 		.topBar
@@ -50,8 +54,10 @@ mixin featuredEntry1
 			+selectEntry1('Teenager Dress','$22.5')
 			+selectEntry1('Warm Dress','$25.5')
 			+selectEntry1('Dotted Mosaic Dress','$21.5')
+	// END FEATURED ENTRY PRODUCT ------------------------------------------------
 
 mixin topPickEntry1
+	// TOP PICK ENTRY PRODUCT  ------------------------------------------------
 	section.featureEntry
 		h2 Top
 		.topBar
@@ -64,6 +70,8 @@ mixin topPickEntry1
 			+selectEntry1('Abstract Dooted Dress','$21.5')
 			+selectEntry1('Flair Trap Dress','$22.5')
 			+selectEntry1('Chipon & Floral Dress','$23.5')
+	// END TOP PICK ENTRY PRODUCT ------------------------------------------------
+	
 
 //- END MIXINS
 
