--- a/includes/footer.042715.1.jade
+++ b/includes/footer.042715.1.jade
@@ -44,6 +44,7 @@ section.footer
 		//- 		QUICK LINK
 		//- ===================================
 
+		// QUICK LINK  ------------------------------------------------
 		section.quickLink
 			h2 Quick-Link
 			+companyLogo1(companyLogoEnabled)
@@ -54,7 +55,8 @@ section.footer
 				a(href="#") Store Location
 				a(href="#") Size Guide
 				a(href="#") Shipping Info
-
+		// END QUICK LINK ------------------------------------------------
+		
 		//- END QUICK LINK
 		
 
@@ -62,6 +64,7 @@ section.footer
 		//- 		RECENT BLOGS
 		//- ===================================
 
+		// RECENT BLOGS  ------------------------------------------------
 		section.recentBlogs
 			h2 Recent Blogs
 			+companyLogo1(companyLogoEnabled)
@@ -70,6 +73,8 @@ section.footer
 			+blogHeadlineEntry1('Top 10 Trending Dresses')
 			+blogHeadlineEntry1('The Awesome V-Line')
 			+blogHeadlineEntry1('News About Opening Hours of the Store')
+		// END RECENT BLOGS ------------------------------------------------
+		
 
 		//- END RECENT BLOGS
 		
@@ -78,6 +83,7 @@ section.footer
 		//- 		TAGS
 		//- ===================================
 
+		// TAGS  ------------------------------------------------
 		section.tags
 			h2 Tags
 			+companyLogo1(companyLogoEnabled)
@@ -92,6 +98,8 @@ section.footer
 				a(href="#") Babydoll
 				a(href="#") Saleoff
 				a(href="#") Floral
+		// END TAGS ------------------------------------------------
+		
 
 		//- END TAGS
 		
@@ -100,6 +108,7 @@ section.footer
 		//- 		CONTACT US
 		//- ===================================
 
+		// CONTACT US  ------------------------------------------------
 		section.contactinfo
 			h2 Find Us On
 			+companyLogo1(companyLogoEnabled)
@@ -118,6 +127,8 @@ section.footer
 			aside.twitterFeed
 				+twitterEntry1('@Kyles','Lorem ipsum dolor sit amet, consectetur adipisicing elit.','5h')
 				+twitterEntry1('@James','Lorem ipsum dolor sit amet, consectetur adipisicing elit.','6h')
+		// END CONTACT US ------------------------------------------------
+		
 
 		//- END CONTACT US
 
@@ -125,6 +136,7 @@ section.footer
 //- 		COPYRIGHT
 //- ===================================
 
+// COPYRIGHT  ------------------------------------------------
 section.copyright
 	.wrapper
 		//- make the p element a block
@@ -135,6 +147,8 @@ section.copyright
 			+linkTemplate042115a('About Us',aboutLink)
 			+linkTemplate042115a('Payment',payLink)
 			+linkTemplate042115a('Shipping',shipLink)
+// END COPYRIGHT ------------------------------------------------
+
 
 //- END COPYRIGHT		
 
