--- a/includes/heroBlock.042715.1.jade
+++ b/includes/heroBlock.042715.1.jade
@@ -4,12 +4,18 @@
 
 section.heroBlock.heroBlock042715
 	//- use a background image
+	// IMAGE SHADER  ------------------------------------------------
+	// the image shader is used for placeholder images and prevents the image from obscuring the text
 	.imageshader
 		//- this is for lightening the background cover
+	// END IMAGE SHADER ------------------------------------------------
+	
 	.wrapper
+
+		// COPY TEXT  ------------------------------------------------
 		.copy
 			h1 Lady
-			p Rethink your swimwear and take it to the street
+			p Rethink your swim wear and take it to the street
 			
 			//- div
 			//- 	//- set the background to transparent so the parent div will provide the background
@@ -23,6 +29,12 @@ section.heroBlock.heroBlock042715
 					//- the div will hold the before element
 					p View the Lookbook
 					//- div.slash
+		// END COPY TEXT ------------------------------------------------
+		
+		// FILL SPACE  ------------------------------------------------
+		// this div is used to fill space and force the .copy text to be aligned around the vertical axis at the 50% mark
 		.fillspace
+		// END FILL SPACE ------------------------------------------------
+		
 
 ////////////////////////////////////////////
