--- a/includes/newsletter.042715.1.jade
+++ b/includes/newsletter.042715.1.jade
@@ -8,9 +8,11 @@ section.newsletter
 		h2 Subscribe
 		+companyLogo1(companyLogoEnabled)
 		
+		// FORM  ------------------------------------------------
 		form(id="newsletter1", method="", action="")
 			span
 				//- a FA icon of a paper airplane must be placed ::before the input and/or absolutely positioned
 				input(type='email', name='email', placeholder='Your Email Address')
+		// END FORM ------------------------------------------------
 
 ////////////////////////////////////////////
