--- a/includes/testimonials.042715.1.jade
+++ b/includes/testimonials.042715.1.jade
@@ -33,6 +33,8 @@ section.testimonials
 		//- to use any of the sliders like bxSlider or flickity you'll have to insert the entries within a ul li
 		//- you'll have to re-style the slider buttons and remove the previous/next arrows
 
+		// TESTIMONIALS  ------------------------------------------------
+		// use either a jQuery slider plugin or custom code it
 		ul.testimonialList
 			li
 				+testimonialEntry1('Kyle James','Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad quidem repudiandae, sequi ea delectus ut.')
@@ -40,7 +42,10 @@ section.testimonials
 				+testimonialEntry1('Mary Jane','Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad quidem repudiandae, sequi ea delectus ut.')
 			li
 				+testimonialEntry1('Peter Parker','Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad quidem repudiandae, sequi ea delectus ut.')
+		// END TESTIMONIALS ------------------------------------------------
 		
+		
+		// TESTIMONIAL SELECTOR NAV  ------------------------------------------------
 		//- testimonial slider selector nav
 		//- each is a square button and when pressed it turns from base white to yellow
 		//- I could have used divs however this works as well
@@ -48,6 +53,8 @@ section.testimonials
 			li
 			li
 			li
+		// END TESTIMONIAL SELECTOR NAV ------------------------------------------------
+		
 
 		//- ===================================
 
