--- a/index.jade
+++ b/index.jade
@@ -1,3 +1,20 @@
+//- ===================================
+//- 		README FOR INDEX.JADE
+//- ===================================
+
+//- index.jade is derived from a site-wide master template known as index.layout.030215.1.jade
+//- the custom content to build this page is located in the ./includes/ folder... 
+//- each partial is imported below and represents a different segment of the page
+//- please reference these partials for the jade code
+//- otherwise to see the final compiled html, see index.html
+
+//- Additional files to reference include...
+//- variables.global.jade [contains global variables]
+//- mixins.universal.jade [contains commonly used jade mixins for many of my multiple projects]
+//- mixins.project.jade [contains project specific mixins that I want available for all later partials and jade code]
+
+//- END README FOR INDEX.JADE
+
 extends index.layout.030215.1.jade
 
 block content
