Due to the project size being so small (scope small), and based on mentor feedback, I've once again consolidated most of the html/jade and css/scss code into single files... leaving the navigation and footer jade and scss separate for now (though I could have or should have consolidated them). The jade mixins were transferred to mixins.project.jade.

--- a/css/style.scss
+++ b/css/style.scss
@@ -106,6 +106,14 @@ p {
 ///////////////////////////////////////////////
 
 ////////////////////////////////////////////
+///// 		INDEX.HTML/INDEX.JADE
+///////////////////////////////////////////////
+
+@import 'index.scss';
+
+///////////////////////////////////////////////
+
+////////////////////////////////////////////
 ///// 		HERO BLOCK
 ///////////////////////////////////////////////
 
