--- a/index.jade
+++ b/index.jade
@@ -32,6 +32,7 @@ extends index.layout.030215.1.jade
 //- ===================================
 
 //- the primary navigation menu is located in the index.layout.jade file in its own partial
+//- please see nav.042715.1.jade or a similarly named file where the end part 042715 represents month/day/year...  see latest version
 
 //- END PRIMARY NAVIGATION MENU
 
@@ -301,5 +302,6 @@ block content
 //- ===================================
 
 //- the footer is located in the index.layout.jade file in its own partial
+//- please see footer.042715.1.jade or a similarly named file where the end part 042715 represents month/day/year...  see latest version
 
 //- END FOOTER
